syntax = "proto3";

package com.github.wesleywu.ri_service_provider;
// necessary
option go_package = "rpc/model";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "tagger/tagger.proto";

service VideoCollection {
  rpc Count (VideoCollectionCountReq) returns (VideoCollectionCountRes){}
  rpc One (VideoCollectionOneReq) returns (VideoCollectionOneRes){}
  rpc List (VideoCollectionListReq) returns (VideoCollectionListRes){}
}

service VideoCollectionRepo {
  rpc Create (VideoCollectionCreateReq) returns (VideoCollectionCreateRes){}
  rpc Update (VideoCollectionUpdateReq) returns (VideoCollectionUpdateRes){}
  rpc Upsert (VideoCollectionUpsertReq) returns (VideoCollectionUpsertRes){}
  rpc Delete (VideoCollectionDeleteReq) returns (VideoCollectionDeleteRes){}
}

message VideoCollectionCountReq {
  google.protobuf.Any  id = 1;
  google.protobuf.Any  name = 2;
  google.protobuf.Any  contentType = 3;
  google.protobuf.Any  filterType = 4;
  google.protobuf.Any  count = 5;
  google.protobuf.Any  isOnline = 6;
  google.protobuf.Any  createdAt = 7;
  google.protobuf.Any  updatedAt = 8;
}

message VideoCollectionCountRes {
  int32 total = 1;
}

message VideoCollectionOneReq {
  google.protobuf.Any  id = 1;
  google.protobuf.Any  name = 2;
  google.protobuf.Any  contentType = 3;
  google.protobuf.Any  filterType = 4;
  google.protobuf.Any  count = 5;
  google.protobuf.Any  isOnline = 6;
  google.protobuf.Any  createdAt = 7;
  google.protobuf.Any  updatedAt = 8;
  string orderBy = 9;
}

message VideoCollectionItem {
  string id = 1 [(tagger.tags) = "json:\"id\""];
  string name = 2;
  int32 contentType = 3;
  int32 filterType = 4;
  uint32 count = 5;
  bool isOnline = 6;
  google.protobuf.Timestamp createdAt = 7;
  google.protobuf.Timestamp updatedAt = 8;
}

message VideoCollectionOneRes {
  string id = 1;
  string name = 2;
  int32 contentType = 3;
  int32 filterType = 4;
  uint32 count = 5;
  bool isOnline = 6;
  google.protobuf.Timestamp createdAt = 7;
  google.protobuf.Timestamp updatedAt = 8;
}

message VideoCollectionListReq {
  google.protobuf.Any  id = 1;
  google.protobuf.Any  name = 2;
  google.protobuf.Any  contentType = 3;
  google.protobuf.Any  filterType = 4;
  google.protobuf.Any  count = 5;
  google.protobuf.Any  isOnline = 6;
  google.protobuf.Any  createdAt = 7;
  google.protobuf.Any  updatedAt = 8;
  uint32 page = 9;
  uint32 pageSize = 10;
  string orderBy = 11;
}

message VideoCollectionListRes {
  int32 total = 1;
  int32 current = 2;
  repeated VideoCollectionItem items = 3;
}

message VideoCollectionCreateReq {
  string id = 1 [(tagger.tags) = "p:\"id\" v:\"required#视频集ID，字符串格式不能为空\" json:\"id\""];
  string name = 2 [(tagger.tags) = "p:\"name\" v:\"required|max-length:50#视频集名称不能为空|视频集名称不能超过50个字\" json:\"name\""];
  int32 contentType = 3 [(tagger.tags) = "p:\"contentType\" v:\"required#内容类型不能为空\" json:\"contentType\""];
  int32 filterType = 4 [(tagger.tags) = "p:\"filterType\" json:\"filterType\""];
  uint32 count = 5 [(tagger.tags) = "p:\"count\" json:\"count\""];
  bool isOnline = 6 [(tagger.tags) = "p:\"isOnline\" json:\"isOnline\""];
  google.protobuf.Timestamp createdAt = 7 [(tagger.tags) = "p:\"createdAt\" json:\"createdAt\""];
  google.protobuf.Timestamp updatedAt = 8 [(tagger.tags) = "p:\"updatedAt\" json:\"updatedAt\""];
}

message VideoCollectionCreateRes {
  string message = 1 [(tagger.tags) = "json:\"message\""];
  int64 lastInsertId = 2 [(tagger.tags) = "json:\"lastInsertId\""];
  int64 rowsAffected = 3 [(tagger.tags) = "json:\"rowsAffected\""];
}

message VideoCollectionUpdateReq {
  string id = 1 [(tagger.tags) = "p:\"id\" v:\"required#视频集ID，字符串格式不能为空\" json:\"id\""];
  string name = 2 [(tagger.tags) = "p:\"name\" v:\"required#视频集名称不能为空\" json:\"name\""];
  int32 contentType = 3 [(tagger.tags) = "p:\"contentType\" v:\"required#内容类型不能为空\" json:\"contentType\""];
  int32 filterType = 4 [(tagger.tags) = "p:\"filterType\" json:\"filterType\""];
  uint32 count = 5 [(tagger.tags) = "p:\"count\" json:\"count\""];
  bool isOnline = 6 [(tagger.tags) = "p:\"isOnline\" json:\"isOnline\""];
  google.protobuf.Timestamp createdAt = 7 [(tagger.tags) = "p:\"createdAt\" json:\"createdAt\""];
  google.protobuf.Timestamp updatedAt = 8 [(tagger.tags) = "p:\"updatedAt\" json:\"updatedAt\""];
}

message VideoCollectionUpdateRes {
  string message = 1 [(tagger.tags) = "json:\"message\""];
  int64 rowsAffected = 2 [(tagger.tags) = "json:\"rowsAffected\""];
}

message VideoCollectionUpsertReq {
  string id = 1 [(tagger.tags) = "p:\"id\" v:\"required#视频集ID，字符串格式不能为空\" json:\"id\""];
  string name = 2 [(tagger.tags) = "p:\"name\" v:\"required#视频集名称不能为空\" json:\"name\""];
  int32 contentType = 3 [(tagger.tags) = "p:\"contentType\" v:\"required#内容类型不能为空\" json:\"contentType\""];
  int32 filterType = 4 [(tagger.tags) = "p:\"filterType\" json:\"filterType\""];
  uint32 count = 5 [(tagger.tags) = "p:\"count\" json:\"count\""];
  bool isOnline = 6 [(tagger.tags) = "p:\"isOnline\" json:\"isOnline\""];
  google.protobuf.Timestamp createdAt = 7 [(tagger.tags) = "p:\"createdAt\" json:\"createdAt\""];
  google.protobuf.Timestamp updatedAt = 8 [(tagger.tags) = "p:\"updatedAt\" json:\"updatedAt\""];
}

message VideoCollectionUpsertRes {
  string message = 1 [(tagger.tags) = "json:\"message\""];
  int64 lastInsertId = 2 [(tagger.tags) = "json:\"lastInsertId\""];
  int64 rowsAffected = 3 [(tagger.tags) = "json:\"rowsAffected\""];
}

message VideoCollectionDeleteReq {
  string id = 1 [(tagger.tags) = "p:\"id\" v:\"required#视频集ID，字符串格式不能为空\" json:\"id\""];
  string name = 2 [(tagger.tags) = "p:\"name\" v:\"required#视频集名称不能为空\" json:\"name\""];
  int32 contentType = 3 [(tagger.tags) = "p:\"contentType\" v:\"required#内容类型不能为空\" json:\"contentType\""];
  int32 filterType = 4 [(tagger.tags) = "p:\"filterType\" json:\"filterType\""];
  uint32 count = 5 [(tagger.tags) = "p:\"count\" json:\"count\""];
  bool isOnline = 6 [(tagger.tags) = "p:\"isOnline\" json:\"isOnline\""];
  google.protobuf.Timestamp createdAt = 7 [(tagger.tags) = "p:\"createdAt\" json:\"createdAt\""];
  google.protobuf.Timestamp updatedAt = 8 [(tagger.tags) = "p:\"updatedAt\" json:\"updatedAt\""];
}

message VideoCollectionDeleteRes {
  string message = 1 [(tagger.tags) = "json:\"message\""];
  int64 lastInsertId = 2 [(tagger.tags) = "json:\"lastInsertId\""];
  int64 rowsAffected = 3 [(tagger.tags) = "json:\"rowsAffected\""];
}